# longbox

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: main-protection.json
.github/workflows/: test.yml
alembic/: README  env.py
alembic/versions/: 0001_initial.py  0002_comic_metadata_expansion.py  0003_drop_loan_columns.py  0004_drop_wishlist_and_pulllist.py  0005_series_source_and_issue_list.py  0006_move_fandom_to_comic.py  0007_csv_import_sessions.py  0008_comic_containment.py  0009_comic_series_links.py  0010_series_canceled_issues.py  0011_variant_covers.py
app/: config.py  db.py  main.py  middleware.py  migrations.py  models.py  version.py
app/routers/: add.py  admin.py  cleanup.py  comic_series.py  comics.py  containment.py  detail.py  duplicates.py  home.py  imports.py  library.py  lookup.py  missing.py  pwa.py  reading_log.py  search.py  series.py  stats.py  tags.py
app/services/: aggregator.py  cache.py  canon_index.py  collected_issues.py  comicvine.py  covers.py  csv_import.py  duplicates.py  errors.py  fandoms.py  icons.py  import_commit.py  import_sources.py  inconsistencies.py  (+10 more)
docs/: adding-comics.md  admin.md  architecture.md  import-csv.md  library.md  mobile-and-pwa.md  quickstart.md  series.md  tags-and-fandoms.md
(+112 files in other folders)
