[project]
name = "longbox"
version = "1.1.12"
description = "Self-hosted comic library manager — catalog issues and trades, pull metadata from Wookieepedia / ComicVine / Metron / Open Library, track variants per copy."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "greenlet>=3.1",
    "httpx>=0.27",
    "alembic>=1.14",
    # Used to render PNG variants of the SVG app icon. Firefox /
    # older Safari / many Android launchers don't accept the SVG
    # icon in a PWA manifest — they need explicit PNG sizes.
    "pillow>=10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
